# PixelScribe

./: README.md  pyproject.toml
docs/: PLAN.md
src/: app.py  logging.py  utils.py
src/components/: canvas.py  palette.py  toolbox.py
src/core/: image_logic.py
